--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/recruit_db?serverTimezone=GMT%2B8
+spring.datasource.url= jdbc:mysql://47.92.149.58:3306/recruit_db?serverTimezone=GMT%2B8
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = Root123456!
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
